# cecs

./: .gitignore  CMakeLists.txt  README.md
include/cecs/: cecs.h
src/: cecs.c  main.c
